# AgentEVAL-Risk-Tools

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
doc/: README.md  TOOL1_README.md  TOOL2_README.md  使用指南.md  接入说明.md
examples/: current_framework_agents.json  demo.json  direct_agent_sample.json
src/agenteval/: __init__.py  __main__.py  adapters.py  api.py  cli.py  connectors.py  evaluation.py  experiment.py  feedback.py  io.py  llm.py  pipeline.py  report.py  schemas.py  static_analysis.py  structured.py
src/agenteval/prompts/: README.md  __init__.py  evaluation_direct_llm_baseline_system.txt  tool1_runtime_event_system.txt  tool1_seed_review_system.txt  tool1_semantic_evidence_system.txt  tool1_siraj_enrichment_system.txt  tool2_siraj_case_system.txt  tool2_siraj_refinement_system.txt  tool2_variant_system.txt
src/agenteval/tool1/: __init__.py  analyzer.py  rules.py  runtime.py  semantic.py  siraj.py
src/agenteval/tool2/: __init__.py  generator.py  siraj.py  templates.py  variants.py
tests/: test_end_to_end.py  test_public_interfaces.py
tests/fixtures/: fake_direct_agent.py  fake_text_runtime_agent.py
