[project]
name = "agenteval-risk-tools"
version = "0.1.0"
description = "Tool1 risk seed discovery and Tool2 seed-conditioned case generation for Agent security evaluation."
requires-python = ">=3.10"
dependencies = ["fastapi>=0.100"]

[project.scripts]
agenteval = "agenteval.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
