[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agenteval-risk-tools"
version = "0.1.0"
description = "Tool1 risk seed discovery and Tool2 seed-conditioned case generation for Agent security evaluation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
api = [
    "fastapi>=0.100,<1",
    "uvicorn[standard]>=0.23,<1",
]
yaml = ["PyYAML>=6,<7"]
test = [
    "fastapi>=0.100,<1",
    "httpx>=0.24,<1",
]

[project.scripts]
agenteval = "agenteval.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"agenteval.prompts" = ["*.txt"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
